--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,7 @@
     padding: 5px;
 }
 
-#people {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 15px;
-}
-
-#bill {
+.box {
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 15px;
